refactor: recreate parent pom.xml

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,6 +12,7 @@
 
     <artifactId>shareit-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <name>ShareIt Server</name>
 
@@ -62,5 +63,4 @@
         </dependency>
     </dependencies>
 
-    
 </project>
