--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - server
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
+      - TZ=Europe/Moscow
 
   server:
     build: server/.
@@ -18,12 +19,10 @@ services:
     depends_on:
       - db
     environment:
-#      - POSTGRES_DB=shareit
-#      - POSTGRES_USER=test
-#      - POSTGRES_PASSWORD=test
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
       - SPRING_DATASOURCE_USERNAME=test
       - SPRING_DATASOURCE_PASSWORD=test
+      - TZ=Europe/Moscow
 
   db:
     image: postgres:13.7-alpine
@@ -31,11 +30,6 @@ services:
     ports:
       - "6541:5432"
     environment:
-#      - DB_NAME=shareit
-#      - DB_HOST=db
-#      - DB_PORT=5432
-#      - POSTGRES_USER=test
-#      - POSTGRES_PASSWORD=test
       - POSTGRES_DB=shareit
       - POSTGRES_USER=test
       - POSTGRES_PASSWORD=test
